[package]
name = "emu"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
async-timer = { version = "1.0.0-beta.14", features = ["tokio1"] }
clap = { version = "4.5.13", features = ["derive", "suggestions"] }
dashmap = "6.0.1"
derivative = "2.2.0"
derive-new = "0.6.0"
futures-util = "0.3.30"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
infinity-sampler = "0.3.0"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
nutype = { version = "0.4.3", features = ["serde"] }
ordered-float = "4.2.2"
pin-project-lite = "0.2.14"
prost = "0.13.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.122"
socket2 = "0.5.7"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
tower = "0.4.13"
tracing = "0.1.40"

[build-dependencies]
anyhow = "1.0.86"
tonic-build = "0.12.1"

[[bin]]
name = "emu"
path = "src/bin/main.rs"
